reverse-yes-no-buttons option